Add gc logging, set native path etc.