@@ -18,11 +18,12 @@ export SCALA_HOME="/root/scala"
 export SPARK_MEM={{default_spark_mem}}
 
 # Set JVM options and Spark Java properties
-SPARK_JAVA_OPTS+=" -Dspark.local.dir={{spark_local_dirs}}"
+SPARK_JAVA_OPTS+=" -Dspark.local.dir={{spark_local_dirs}} -Dspark.storage.blockManagerTimeoutIntervalMs=1200000"
+SPARK_JAVA_OPTS+=" -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps "
 export SPARK_JAVA_OPTS
 
 export HADOOP_HOME="/root/ephemeral-hdfs"
-export SPARK_LIBRARY_PATH="/root/ephemeral-hdfs/lib/native/"
+export SPARK_LIBRARY_PATH="/root/pipelines/lib"
 export SPARK_MASTER_IP={{active_master}}
 export MASTER=`cat /root/spark-ec2/cluster-url`
 export SPARK_CLASSPATH=$SPARK_CLASSPATH":/root/ephemeral-hdfs/conf"
